[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://InnerCircle.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

void fragment()
{
    float speed = 3.0,
          time = TIME * speed,
          radius = 0.4 + 0.04 * sin(time),
          thickness = 0.09 + 0.05 * cos(time),
          dist = distance(vec2(UV.x, UV.y), vec2(0.5,0.5));
    COLOR = vec4(smoothstep(thickness/2., 0., abs(dist-radius)));
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="CircleShape2D" id=4]
radius = 7.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 3 )
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="InnerCircle" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 4 )

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
